# forgeloop

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.codex/: INSTALL.md
agents/: README.md  (+10 more)
backup/codex_initiative_runtime_mvp/: .gitignore  AGENTS.md  README.md  pyproject.toml
backup/codex_initiative_runtime_mvp/.agents/skills/cut-anchor/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/escalation-panel/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/g1-task-gate/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/g2-milestone-gate/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/g3-initiative-gate/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/open-milestone-pr/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/r1-task-review/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/r2-milestone-review/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/r3-initiative-review/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/run-initiative/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/shadow-check/: SKILL.md
backup/codex_initiative_runtime_mvp/.agents/skills/shadow-review/: SKILL.md
backup/codex_initiative_runtime_mvp/.codex/: config.toml
backup/codex_initiative_runtime_mvp/.codex/agents/: architect.toml  closer.toml  pragmatist.toml  sensor_primary.toml  task_reviewer.toml  task_worker.toml
backup/codex_initiative_runtime_mvp/docs/design/: INIT-001-design.md
backup/codex_initiative_runtime_mvp/docs/initiatives/: INIT-001.md
backup/codex_initiative_runtime_mvp/src/codex_initiative_runtime/: cli.py  escalation.py  gate_review.py  initiative_runtime.py  models.py  planning_parser.py  review_packet.py  scheduler.py  state_store.py  task_controller.py  utils.py
backup/codex_initiative_runtime_mvp/tests/: test_controller.py  test_gate_review.py  test_planning.py  test_state.py
(+477 files in other folders)
